# aistore

./: .dockerignore  .gitignore  .gitlab-ci.yml  .golangci.yml  .nspect-allowlist.toml  CNAME  CONTRIBUTING.md  Gemfile  Gopkg.toml  Makefile  NOTICE  README.md  SECURITY.md  _config.yml  action.yml  docker_videos.md  fetch_upstream.sh  fshc.md  generatefromproject.sh  go.mod  go.sum  index.markdown  netlify.toml  sonar-project.properties  videos.md
python/: .pylintrc  .pylintrc-tests  CHANGELOG.md  Makefile  README.md  doc_prefixes.sh  pyproject.toml  setup.py
python/aistore/: __init__.py  client.py  common_requirements  version.py
python/aistore/botocore_patch/: README.md  botocore.py  botocore_requirements
python/aistore/examples/: README.md
python/aistore/examples/ais-etl/: etl_convert_img_to_npy.py  etl_md5_hpush.py  etl_md5_hpush_streaming.py  etl_md5_io.py  etl_torchvision_hpush.py  etl_torchvision_io.py
python/aistore/examples/aisio-pytorch/: aisio_pytorch_example.ipynb
python/aistore/examples/dask/: dask-aistore-demo.ipynb
python/aistore/examples/sdk/: sdk-etl-tutorial.ipynb  sdk-tutorial.ipynb
python/aistore/fsspec/: README.md  __init__.py  filesystem.py
python/aistore/mcp/: README.md  __init__.py  __main__.py  server.py
python/aistore/mcp/tools/: buckets.py  cluster.py  jobs.py
python/aistore/pytorch/: README.md  __init__.py  aisio.py  base_dataset.py  base_iter_dataset.py  base_map_dataset.py  batch_iter_dataset.py  dataset.py  dev_requirements  dynamic_sampler.py  iter_dataset.py  map_dataset.py  multishard_dataset.py  parallel_map_dataset.py  shard_reader.py  utils.py  worker_request_client.py  worker_session_manager.py
python/aistore/sdk/: README.md  __init__.py  ais_source.py  api.py  archive_config.py  archive_mode.py  blob_download_config.py  bucket.py  client.py  cluster.py  const.py  dsort.py  dsort_types.py  enums.py  errors.py  etl.py  etl_const.py  etl_templates.py  job.py  list_object_flag.py  lock_poller.py  multipart_decoder.py  namespace.py  object.py  object_attributes.py  object_file.py  object_group.py  object_iterator.py  object_props.py  object_range.py  object_reader.py  presence_poller.py  provider.py  request_client.py  request_executor.py  response_handler.py  retry_config.py  retry_manager.py  session_manager.py  types.py  (+4 more)
python/aistore/sdk/authn/: README.md  __init__.py  access_attr.py  authn_client.py  authn_types.py  cluster_manager.py  errors.py  response_handler.py  role_manager.py  token_manager.py  types.py  user_manager.py  utils.py
python/aistore/sdk/batch/: README.md  archive_stream_extractor.py  batch.py  batch_loader.py  batch_request.py  batch_response.py  body_stream_iterator.py  buffered_content_reader.py  errors.py  multipart_boundary_detector.py  multipart_decoder.py  stateful_streaming_parser.py  types.py
python/aistore/sdk/dataset/: README.md  config_attribute.py  data_attribute.py  data_shard.py  dataset_config.py  label_attribute.py
python/aistore/sdk/dsort/: README.md  __init__.py  core.py  ekm.py  framework.py  types.py
python/aistore/sdk/etl/: __init__.py  etl.py  etl_config.py  etl_const.py  etl_templates.py
python/aistore/sdk/get_batch/: archive_stream_extractor.py  batch_loader.py  batch_request.py  batch_response.py  body_stream_iterator.py  buffered_content_reader.py  multipart_boundary_detector.py  multipart_decoder.py  stateful_streaming_parser.py
python/aistore/sdk/multiobj/: __init__.py  object_collection.py  object_group.py  object_names.py  object_range.py  object_template.py
python/api-client/: setup.py
python/api-client/examples/: list_bucket.py
python/api-client/test/: __init__.py  helpers.py  test_bucket_api.py  test_cluster_api.py  test_object_api.py  test_sort_api.py
python/examples/: README.md
python/examples/ais-etl/: ais_etl_examples.ipynb  etl_convert_img_to_npy.py  etl_md5_hpush.py  etl_md5_hpush_streaming.py  etl_md5_io.py  etl_torchvision_hpush.py  etl_torchvision_io.py
python/examples/aisio-pytorch/: aisio_pytorch_example.ipynb  cifar10_training_example.ipynb  dataset_example.ipynb  multishard_dataset_example.ipynb  shard_reader_example.ipynb
python/examples/dask/: dask-aistore-demo.ipynb
python/examples/google_colab/: aistore_deployment.ipynb
python/examples/pytorch/: cifar10_training_example.ipynb  dataset_example.ipynb  multishard_dataset_example.ipynb  resnet50_wds_train.ipynb  shard_reader_example.ipynb
python/examples/sdk/: accessing-objects.ipynb  ais-batch-requests.ipynb  bucket-management.ipynb  cluster-performance.ipynb  multi-object-operations.ipynb  multipart-upload.ipynb  resilient-streaming-object-file.ipynb  sdk-basics.ipynb  sdk-etl-tutorial.ipynb  uploading-objects.ipynb  working-with-archives.ipynb  writing-webdataset.ipynb
python/examples/sdk/object_file/: obj-file-stress-test.py  obj-file-writer-stress-test.py  obj-read-benchmark.py  utils.py
python/pyaisloader/: Makefile  README.md  benchmark.py  ci-test.sh  client_config.py  main.py  pyproject.toml  requirements.txt  setup.py
python/pyaisloader/pyaisloader/: benchmark.py  client_config.py  const.py  main.py  pytorch_benchmark.py
python/pyaisloader/utils/: bucket_utils.py  cli_utils.py  concurrency_utils.py  parse_utils.py  print_utils.py  random_utils.py  stat_utils.py
python/sdk/: Makefile  README.md  botocore_requirements.dev.txt
python/sdk/examples/: README.md
python/tar2tf/: README.md  requirements-jupyter.txt  requirements.txt  setup.py  setup.sh
python/tar2tf/examples/: imagenet_from_disk.py  imagenet_in_memory.py  imagenet_remote_execution.py  in_memory_notebook.ipynb  remote_execution.ipynb
python/tar2tf/tar2tf/: __init__.py  aisapi.py  aisdataset.py  downloadworker.py  messages.py  ops.py  tarutils.py
python/tests/: README.md  __init__.py  botocore_common.py  const.py  utils.py
python/tests/integration/: __init__.py
python/tests/perf/: multipart_download_bench.py
python/tests/perf/nbi/: README.md  (+1 more)
python/tests/s3compat/: .gitignore  README.md  compatibility_test.sh  minio_helpers.py  requirements  requirements.txt  run_tests.py  tests.py
(+4315 files in other folders)
