[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["aistore"]

[tool.hatch.build.targets.sdist.force-include]
"../LICENSE" = "LICENSE"

[tool.hatch.version]
path = "aistore/version.py"

[tool.pytest.ini_options]
markers = [
    "etl: marks tests as using ETL, requiring a Kubernetes cluster",
    "authn: marks tests as using AuthN, requiring an AIStore cluster with AuthN enabled",
    "extended: tests beyond simple integration, including stress tests and cluster changes",
    "nonparallel: tests that are specifically not able to run alongside certain others",
]

[project]
name = "aistore"
dynamic = ["version"]
authors = [
  { name = "Team AIStore", email = "aistore@nvidia.com" },
]
description = "Client-side APIs to access and utilize clusters, buckets, and objects on AIStore."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "requests>=2.28.2",
    "urllib3>=1.26.18",
    "packaging>=23.0",
    "overrides>=7.4.0",
    "python-dateutil>=2.9.0",
    "PyYAML>=6.0.1",
    "pydantic>=2.5.0",
    "cloudpickle>=3.0.0",
    "humanize>=4.9.0",
    "braceexpand>=0.1.7",
    "msgspec>=0.18.5",
    "xxhash>=3.3.0",
    "tenacity>=9.0.0",
]

keywords = [
    "AIStore",
    "Artificial Intelligence",
    "Object Storage",
    "Deep Learning",
    "ETL",
    "Petascale",
    "High Performance",
    "Lightweight Object Storage",
]

[project.optional-dependencies]
pytorch = [
    "torch",
    "torchdata",
    "webdataset>=0.2.100",
    "alive_progress>=3.1.0"
]
botocore = [
    "wrapt",
]
etl = [
    "fastapi>=0.109.1",
    "httpx>=0.28.0",
    "aiofiles>=23.2.1",
    "uvicorn[standard]>=0.32.0",
    "flask>=2.3.0",
    "gunicorn>=23.0.0",
]

[project.urls]
"Homepage" = "https://aistore.nvidia.com"
"Documentation" = "https://aistore.nvidia.com/docs/python-sdk"
"Changelog" = "https://github.com/NVIDIA/aistore/blob/main/python/CHANGELOG.md"
"Source" = "https://github.com/NVIDIA/aistore/tree/main/python/aistore/sdk"
